# metainflow-studio-cli

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent-usage.md  changelog.md  development-log.md  technical-architecture-plan.md  usage.md
docs/plans/: 2026-03-14-web-search-design.md  2026-03-14-web-search.md  2026-03-14-xlsx-region-splitting.md
metainflow-skills/metainflow-doc-parse/: SKILL.md
metainflow-skills/metainflow-web-fetch/: SKILL.md
metainflow-skills/metainflow-web-search/: SKILL.md
metainflow_studio_cli/: main.py
metainflow_studio_cli/core/: config.py
metainflow_studio_cli/services/doc_parse/: converters.py  service.py
metainflow_studio_cli/services/web_fetch/: __init__.py  fetcher.py  service.py  summary_provider.py
metainflow_studio_cli/services/web_search/: __init__.py  playwright_search_provider.py  search_provider.py  searxng_web_search_provider.py  service.py  summary_provider.py  zhipu_web_search_provider.py
tests/: test_cli_help.py  test_config.py
tests/cli/: test_enterprise_query_cli.py  test_search_summary_json.py  test_web_crawl_cli.py
tests/services/: test_doc_conversion.py  test_enterprise_query_router.py  test_enterprise_query_service.py  test_web_fetch_fetcher.py  test_web_fetch_service.py  test_web_search_playwright_provider.py  test_web_search_search_provider.py  test_web_search_service.py  test_web_search_summary_provider.py  test_zhipu_web_search_provider.py
