[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metainflow-studio-cli"
version = "0.1.0"
description = "Metainflow studio command line toolkit"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "playwright>=1.52.0",
  "pypdf>=4.2.0",
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
metainflow = "metainflow_studio_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: marks tests requiring external sample fixtures",
]
